# serializer version: 1
# name: TestCohort.test_cohortpeople_basic
  '''
  /* cohort_calculation:cohort_calc:00000000 */
  INSERT INTO cohortpeople
  SELECT id,
         99999 as cohort_id,
         99999 as team_id,
         1 AS sign,
         2 AS version
  FROM (((
            (SELECT persons.id AS id
             FROM
               (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, '$some_prop'), ''), 'null'), '^"|"$', '')), person.version), 1) AS `properties___$some_prop`,
                       person.id AS id
                FROM person
                WHERE and(equals(person.team_id, 99999), in(id,
                                                              (SELECT where_optimization.id AS id
                                                               FROM person AS where_optimization
                                                               WHERE and(equals(where_optimization.team_id, 99999), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, '$some_prop'), ''), 'null'), '^"|"$', ''), 'something'), 0)))))
                GROUP BY person.id
                HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
             WHERE ifNull(equals(persons.`properties___$some_prop`, 'something'), 0)
             ORDER BY persons.id ASC
             LIMIT 1000000000 SETTINGS optimize_aggregation_in_order=1,
                                       join_algorithm='auto')) INTERSECT DISTINCT (
                                                                                     (SELECT persons.id AS id
                                                                                      FROM
                                                                                        (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, '$another_prop'), ''), 'null'), '^"|"$', '')), person.version), 1) AS `properties___$another_prop`,
                                                                                                person.id AS id
                                                                                         FROM person
                                                                                         WHERE and(equals(person.team_id, 99999), in(id,
                                                                                                                                       (SELECT where_optimization.id AS id
                                                                                                                                        FROM person AS where_optimization
                                                                                                                                        WHERE and(equals(where_optimization.team_id, 99999), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, '$another_prop'), ''), 'null'), '^"|"$', ''), 'something'), 0)))))
                                                                                         GROUP BY person.id
                                                                                         HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
                                                                                      WHERE ifNull(equals(persons.`properties___$another_prop`, 'something'), 0)
                                                                                      ORDER BY persons.id ASC
                                                                                      LIMIT 1000000000 SETTINGS optimize_aggregation_in_order=1,
                                                                                                                join_algorithm='auto')))) as person SETTINGS optimize_aggregation_in_order = 1,
                                                                                                                                                             join_algorithm = 'auto'
  '''
# ---
# name: TestCohort.test_cohortpeople_basic.1
  '''
  /* cohort_calculation:cohort_calc:00000000 */
  INSERT INTO cohortpeople
  SELECT id,
         99999 as cohort_id,
         99999 as team_id,
         1 AS sign,
         3 AS version
  FROM
    (SELECT persons.id AS id
     FROM
       (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, '$some_prop'), ''), 'null'), '^"|"$', '')), person.version), 1) AS `properties___$some_prop`,
               tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, '$another_prop'), ''), 'null'), '^"|"$', '')), person.version), 1) AS `properties___$another_prop`,
               person.id AS id
        FROM person
        WHERE and(equals(person.team_id, 99999), in(id,
                                                      (SELECT where_optimization.id AS id
                                                       FROM person AS where_optimization
                                                       WHERE and(equals(where_optimization.team_id, 99999), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, '$some_prop'), ''), 'null'), '^"|"$', ''), 'something'), 0), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, '$another_prop'), ''), 'null'), '^"|"$', ''), 'something'), 0)))))
        GROUP BY person.id
        HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
     WHERE and(ifNull(equals(persons.`properties___$some_prop`, 'something'), 0), ifNull(equals(persons.`properties___$another_prop`, 'something'), 0))
     ORDER BY persons.id ASC
     LIMIT 1000000000 SETTINGS optimize_aggregation_in_order=1,
                               join_algorithm='auto') as person SETTINGS optimize_aggregation_in_order = 1,
                                                                         join_algorithm = 'auto'
  '''
# ---
# name: TestCohort.test_cohortpeople_with_not_in_cohort_operator
  '''
  /* cohort_calculation:cohort_calc:00000000 */
  INSERT INTO cohortpeople
  SELECT id,
         99999 as cohort_id,
         99999 as team_id,
         1 AS sign,
         2 AS version
  FROM (
          (SELECT persons.id AS id
           FROM
             (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, '$some_prop'), ''), 'null'), '^"|"$', '')), person.version), 1) AS `properties___$some_prop`,
                     person.id AS id
              FROM person
              WHERE and(equals(person.team_id, 99999), in(id,
                                                            (SELECT where_optimization.id AS id
                                                             FROM person AS where_optimization
                                                             WHERE and(equals(where_optimization.team_id, 99999), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, '$some_prop'), ''), 'null'), '^"|"$', ''), 'something1'), 0)))))
              GROUP BY person.id
              HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
           WHERE ifNull(equals(persons.`properties___$some_prop`, 'something1'), 0)
           ORDER BY persons.id ASC
           LIMIT 1000000000 SETTINGS optimize_aggregation_in_order=1,
                                     join_algorithm='auto')) as person SETTINGS optimize_aggregation_in_order = 1,
                                                                                join_algorithm = 'auto'
  '''
# ---
# name: TestCohort.test_cohortpeople_with_not_in_cohort_operator.1
  '''
  /* cohort_calculation:cohort_calc:00000000 */
  INSERT INTO cohortpeople
  SELECT id,
         99999 as cohort_id,
         99999 as team_id,
         1 AS sign,
         3 AS version
  FROM
    (SELECT persons.id AS id
     FROM
       (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, '$some_prop'), ''), 'null'), '^"|"$', '')), person.version), 1) AS `properties___$some_prop`,
               person.id AS id
        FROM person
        WHERE and(equals(person.team_id, 99999), in(id,
                                                      (SELECT where_optimization.id AS id
                                                       FROM person AS where_optimization
                                                       WHERE and(equals(where_optimization.team_id, 99999), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, '$some_prop'), ''), 'null'), '^"|"$', ''), 'something1'), 0)))))
        GROUP BY person.id
        HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
     WHERE ifNull(equals(persons.`properties___$some_prop`, 'something1'), 0)
     ORDER BY persons.id ASC
     LIMIT 1000000000) as person SETTINGS optimize_aggregation_in_order = 1,
                                          join_algorithm = 'auto'
  '''
# ---
# name: TestCohort.test_cohortpeople_with_not_in_cohort_operator.2
  '''
  /* cohort_calculation:cohort_calc:00000000 */
  INSERT INTO cohortpeople
  SELECT id,
         99999 as cohort_id,
         99999 as team_id,
         1 AS sign,
         2 AS version
  FROM ((
           (SELECT source.id AS id
            FROM
              (SELECT actor_id AS actor_id,
                      count() AS event_count,
                      groupUniqArray(distinct_id) AS event_distinct_ids,
                      max(timestamp) AS last_seen,
                      actor_id AS id
               FROM
                 (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
                         toTimeZone(e.timestamp, 'UTC') AS timestamp,
                         e.uuid AS uuid,
                         e.distinct_id AS distinct_id
                  FROM events AS e
                  LEFT OUTER JOIN
                    (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                            person_distinct_id_overrides.distinct_id AS distinct_id
                     FROM person_distinct_id_overrides
                     WHERE equals(person_distinct_id_overrides.team_id, 99999)
                     GROUP BY person_distinct_id_overrides.distinct_id
                     HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
                  WHERE and(equals(e.team_id, 99999), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(timestamp, toDateTime64('today', 6, 'UTC')), equals(e.event, '$pageview')))
               GROUP BY actor_id) AS source
            ORDER BY source.id ASC
            LIMIT 1000000000 SETTINGS optimize_aggregation_in_order=1,
                                      join_algorithm='auto'))
        EXCEPT (
                  (SELECT cohort_people.person_id AS id
                   FROM
                     (SELECT DISTINCT cohortpeople.person_id AS person_id,
                                      cohortpeople.cohort_id AS cohort_id,
                                      cohortpeople.team_id AS team_id
                      FROM cohortpeople
                      WHERE and(equals(cohortpeople.team_id, 99999), in(tuple(cohortpeople.cohort_id, cohortpeople.version), [(99999, 0)]))) AS cohort_people
                   WHERE and(equals(cohort_people.cohort_id, 99999), equals(cohort_people.team_id, 99999))
                   LIMIT 1000000000))) as person SETTINGS optimize_aggregation_in_order = 1,
                                                          join_algorithm = 'auto'
  '''
# ---
# name: TestCohort.test_cohortpeople_with_not_in_cohort_operator.3
  '''
  /* cohort_calculation:cohort_calc:00000000 */
  INSERT INTO cohortpeople
  SELECT id,
         99999 as cohort_id,
         99999 as team_id,
         1 AS sign,
         3 AS version
  FROM ((
           (SELECT source.id AS id
            FROM
              (SELECT actor_id AS actor_id,
                      count() AS event_count,
                      groupUniqArray(distinct_id) AS event_distinct_ids,
                      max(timestamp) AS last_seen,
                      actor_id AS id
               FROM
                 (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
                         toTimeZone(e.timestamp, 'UTC') AS timestamp,
                         e.uuid AS uuid,
                         e.distinct_id AS distinct_id
                  FROM events AS e
                  LEFT OUTER JOIN
                    (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                            person_distinct_id_overrides.distinct_id AS distinct_id
                     FROM person_distinct_id_overrides
                     WHERE equals(person_distinct_id_overrides.team_id, 99999)
                     GROUP BY person_distinct_id_overrides.distinct_id
                     HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
                  WHERE and(equals(e.team_id, 99999), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(timestamp, toDateTime64('today', 6, 'UTC')), equals(e.event, '$pageview')))
               GROUP BY actor_id) AS source
            ORDER BY source.id ASC
            LIMIT 1000000000 SETTINGS optimize_aggregation_in_order=1,
                                      join_algorithm='auto'))
        EXCEPT (
                  (SELECT cohort_people.person_id AS id
                   FROM
                     (SELECT DISTINCT cohortpeople.person_id AS person_id,
                                      cohortpeople.cohort_id AS cohort_id,
                                      cohortpeople.team_id AS team_id
                      FROM cohortpeople
                      WHERE and(equals(cohortpeople.team_id, 99999), in(tuple(cohortpeople.cohort_id, cohortpeople.version), [(99999, 0)]))) AS cohort_people
                   WHERE and(equals(cohort_people.cohort_id, 99999), equals(cohort_people.team_id, 99999))
                   LIMIT 1000000000))) as person SETTINGS optimize_aggregation_in_order = 1,
                                                          join_algorithm = 'auto'
  '''
# ---
# name: TestCohort.test_cohortpeople_with_not_in_cohort_operator[new_events_schema.1]
  '''
  /* cohort_calculation:cohort_calc:00000000 */
  INSERT INTO cohortpeople
  SELECT id,
         99999 as cohort_id,
         99999 as team_id,
         1 AS sign,
         3 AS version
  FROM ((
           (SELECT source.id AS id
            FROM
              (SELECT actor_id AS actor_id,
                      count() AS event_count,
                      groupUniqArray(distinct_id) AS event_distinct_ids,
                      max(timestamp) AS last_seen,
                      actor_id AS id
               FROM
                 (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
                         toTimeZone(e.timestamp, 'UTC') AS timestamp,
                         e.uuid AS uuid,
                         e.distinct_id AS distinct_id
                  FROM events_json AS e
                  LEFT OUTER JOIN
                    (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                            person_distinct_id_overrides.distinct_id AS distinct_id
                     FROM person_distinct_id_overrides
                     WHERE equals(person_distinct_id_overrides.team_id, 99999)
                     GROUP BY person_distinct_id_overrides.distinct_id
                     HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
                  WHERE and(equals(e.team_id, 99999), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(timestamp, toDateTime64('today', 6, 'UTC')), equals(e.event, '$pageview')))
               GROUP BY actor_id) AS source
            ORDER BY source.id ASC
            LIMIT 1000000000 SETTINGS optimize_aggregation_in_order=1,
                                      join_algorithm='auto'))
        EXCEPT (
                  (SELECT cohort_people.person_id AS id
                   FROM
                     (SELECT DISTINCT cohortpeople.person_id AS person_id,
                                      cohortpeople.cohort_id AS cohort_id,
                                      cohortpeople.team_id AS team_id
                      FROM cohortpeople
                      WHERE and(equals(cohortpeople.team_id, 99999), in(tuple(cohortpeople.cohort_id, cohortpeople.version), [(99999, 0)]))) AS cohort_people
                   WHERE and(equals(cohort_people.cohort_id, 99999), equals(cohort_people.team_id, 99999))
                   LIMIT 1000000000))) as person SETTINGS optimize_aggregation_in_order = 1,
                                                          join_algorithm = 'auto'
  '''
# ---
# name: TestCohort.test_cohortpeople_with_not_in_cohort_operator[new_events_schema]
  '''
  /* cohort_calculation:cohort_calc:00000000 */
  INSERT INTO cohortpeople
  SELECT id,
         99999 as cohort_id,
         99999 as team_id,
         1 AS sign,
         2 AS version
  FROM ((
           (SELECT source.id AS id
            FROM
              (SELECT actor_id AS actor_id,
                      count() AS event_count,
                      groupUniqArray(distinct_id) AS event_distinct_ids,
                      max(timestamp) AS last_seen,
                      actor_id AS id
               FROM
                 (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
                         toTimeZone(e.timestamp, 'UTC') AS timestamp,
                         e.uuid AS uuid,
                         e.distinct_id AS distinct_id
                  FROM events_json AS e
                  LEFT OUTER JOIN
                    (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                            person_distinct_id_overrides.distinct_id AS distinct_id
                     FROM person_distinct_id_overrides
                     WHERE equals(person_distinct_id_overrides.team_id, 99999)
                     GROUP BY person_distinct_id_overrides.distinct_id
                     HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
                  WHERE and(equals(e.team_id, 99999), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(timestamp, toDateTime64('today', 6, 'UTC')), equals(e.event, '$pageview')))
               GROUP BY actor_id) AS source
            ORDER BY source.id ASC
            LIMIT 1000000000 SETTINGS optimize_aggregation_in_order=1,
                                      join_algorithm='auto'))
        EXCEPT (
                  (SELECT cohort_people.person_id AS id
                   FROM
                     (SELECT DISTINCT cohortpeople.person_id AS person_id,
                                      cohortpeople.cohort_id AS cohort_id,
                                      cohortpeople.team_id AS team_id
                      FROM cohortpeople
                      WHERE and(equals(cohortpeople.team_id, 99999), in(tuple(cohortpeople.cohort_id, cohortpeople.version), [(99999, 0)]))) AS cohort_people
                   WHERE and(equals(cohort_people.cohort_id, 99999), equals(cohort_people.team_id, 99999))
                   LIMIT 1000000000))) as person SETTINGS optimize_aggregation_in_order = 1,
                                                          join_algorithm = 'auto'
  '''
# ---
# name: TestCohort.test_cohortpeople_with_not_in_cohort_operator_and_no_precalculation
  '''
  SELECT uuid,
         distinct_id
  FROM events
  WHERE team_id = 99999
    AND (distinct_id IN
           (SELECT distinct_id
            FROM
              (SELECT person_distinct_ids.distinct_id AS distinct_id
               FROM
                 (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                         person_distinct_id2.distinct_id AS distinct_id
                  FROM person_distinct_id2
                  WHERE equals(person_distinct_id2.team_id, 99999)
                  GROUP BY person_distinct_id2.distinct_id
                  HAVING equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0) SETTINGS optimize_aggregation_in_order=1) AS person_distinct_ids
               WHERE in(person_distinct_ids.person_id, ((
                                                           (SELECT source.id AS id
                                                            FROM
                                                              (SELECT actor_id AS actor_id,
                                                                      count() AS event_count,
                                                                      groupUniqArray(distinct_id) AS event_distinct_ids,
                                                                      max(timestamp) AS last_seen,
                                                                      actor_id AS id
                                                               FROM
                                                                 (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
                                                                         toTimeZone(e.timestamp, 'UTC') AS timestamp,
                                                                         e.uuid AS uuid,
                                                                         e.distinct_id AS distinct_id
                                                                  FROM events AS e
                                                                  LEFT OUTER JOIN
                                                                    (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                                                                            person_distinct_id_overrides.distinct_id AS distinct_id
                                                                     FROM person_distinct_id_overrides
                                                                     WHERE equals(person_distinct_id_overrides.team_id, 99999)
                                                                     GROUP BY person_distinct_id_overrides.distinct_id
                                                                     HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
                                                                  WHERE and(equals(e.team_id, 99999), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(timestamp, toDateTime64('today', 6, 'UTC')), equals(e.event, '$pageview')))
                                                               GROUP BY actor_id) AS source
                                                            ORDER BY source.id ASC SETTINGS optimize_aggregation_in_order=1,
                                                                                            join_algorithm='auto'))
                                                        EXCEPT (
                                                                  (SELECT cohort_people.person_id AS id
                                                                   FROM
                                                                     (SELECT DISTINCT cohortpeople.person_id AS person_id,
                                                                                      cohortpeople.cohort_id AS cohort_id,
                                                                                      cohortpeople.team_id AS team_id
                                                                      FROM cohortpeople
                                                                      WHERE 0) AS cohort_people
                                                                   WHERE and(equals(cohort_people.cohort_id, 99999), equals(cohort_people.team_id, 99999))))))
               LIMIT 1000000000)))
  '''
# ---
# name: TestCohort.test_cohortpeople_with_not_in_cohort_operator_and_no_precalculation[new_events_schema]
  '''
  SELECT uuid,
         distinct_id
  FROM events_json
  WHERE team_id = 99999
    AND (distinct_id IN
           (SELECT distinct_id
            FROM
              (SELECT person_distinct_ids.distinct_id AS distinct_id
               FROM
                 (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                         person_distinct_id2.distinct_id AS distinct_id
                  FROM person_distinct_id2
                  WHERE equals(person_distinct_id2.team_id, 99999)
                  GROUP BY person_distinct_id2.distinct_id
                  HAVING equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0) SETTINGS optimize_aggregation_in_order=1) AS person_distinct_ids
               WHERE in(person_distinct_ids.person_id, ((
                                                           (SELECT source.id AS id
                                                            FROM
                                                              (SELECT actor_id AS actor_id,
                                                                      count() AS event_count,
                                                                      groupUniqArray(distinct_id) AS event_distinct_ids,
                                                                      max(timestamp) AS last_seen,
                                                                      actor_id AS id
                                                               FROM
                                                                 (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
                                                                         toTimeZone(e.timestamp, 'UTC') AS timestamp,
                                                                         e.uuid AS uuid,
                                                                         e.distinct_id AS distinct_id
                                                                  FROM events_json AS e
                                                                  LEFT OUTER JOIN
                                                                    (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                                                                            person_distinct_id_overrides.distinct_id AS distinct_id
                                                                     FROM person_distinct_id_overrides
                                                                     WHERE equals(person_distinct_id_overrides.team_id, 99999)
                                                                     GROUP BY person_distinct_id_overrides.distinct_id
                                                                     HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
                                                                  WHERE and(equals(e.team_id, 99999), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(timestamp, toDateTime64('today', 6, 'UTC')), equals(e.event, '$pageview')))
                                                               GROUP BY actor_id) AS source
                                                            ORDER BY source.id ASC SETTINGS optimize_aggregation_in_order=1,
                                                                                            join_algorithm='auto'))
                                                        EXCEPT (
                                                                  (SELECT cohort_people.person_id AS id
                                                                   FROM
                                                                     (SELECT DISTINCT cohortpeople.person_id AS person_id,
                                                                                      cohortpeople.cohort_id AS cohort_id,
                                                                                      cohortpeople.team_id AS team_id
                                                                      FROM cohortpeople
                                                                      WHERE 0) AS cohort_people
                                                                   WHERE and(equals(cohort_people.cohort_id, 99999), equals(cohort_people.team_id, 99999))))))
               LIMIT 1000000000)))
  '''
# ---
# name: TestCohort.test_cohortpeople_with_not_in_cohort_operator_for_behavioural_cohorts
  '''
  /* cohort_calculation:cohort_calc:00000000 */
  INSERT INTO cohortpeople
  SELECT id,
         99999 as cohort_id,
         99999 as team_id,
         1 AS sign,
         2 AS version
  FROM (
          (SELECT source.id AS id
           FROM
             (SELECT actor_id AS actor_id,
                     count() AS event_count,
                     groupUniqArray(distinct_id) AS event_distinct_ids,
                     actor_id AS id
              FROM
                (SELECT min(toTimeZone(e.timestamp, 'UTC')) AS min_timestamp,
                        minIf(toTimeZone(e.timestamp, 'UTC'), greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('explicit_redacted_timestamp', 6, 'UTC'))) AS min_timestamp_with_condition,
                        if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
                        argMin(e.uuid, toTimeZone(e.timestamp, 'UTC')) AS uuid,
                        argMin(e.distinct_id, toTimeZone(e.timestamp, 'UTC')) AS distinct_id
                 FROM events AS e
                 LEFT OUTER JOIN
                   (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                           person_distinct_id_overrides.distinct_id AS distinct_id
                    FROM person_distinct_id_overrides
                    WHERE equals(person_distinct_id_overrides.team_id, 99999)
                    GROUP BY person_distinct_id_overrides.distinct_id
                    HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
                 WHERE and(equals(e.team_id, 99999), lessOrEquals(e.timestamp, toDateTime64('today', 6, 'UTC')), equals(e.event, 'signup'))
                 GROUP BY if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id)
                 HAVING and(equals(min_timestamp, min_timestamp_with_condition), notEquals(min_timestamp, fromUnixTimestamp(0))))
              GROUP BY actor_id) AS source
           ORDER BY source.id ASC
           LIMIT 1000000000 SETTINGS optimize_aggregation_in_order=1,
                                     join_algorithm='auto')) as person SETTINGS optimize_aggregation_in_order = 1,
                                                                                join_algorithm = 'auto'
  '''
# ---
# name: TestCohort.test_cohortpeople_with_not_in_cohort_operator_for_behavioural_cohorts.1
  '''
  /* cohort_calculation:cohort_calc:00000000 */
  INSERT INTO cohortpeople
  SELECT id,
         99999 as cohort_id,
         99999 as team_id,
         1 AS sign,
         3 AS version
  FROM (
          (SELECT source.id AS id
           FROM
             (SELECT actor_id AS actor_id,
                     count() AS event_count,
                     groupUniqArray(distinct_id) AS event_distinct_ids,
                     actor_id AS id
              FROM
                (SELECT min(toTimeZone(e.timestamp, 'UTC')) AS min_timestamp,
                        minIf(toTimeZone(e.timestamp, 'UTC'), greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('explicit_redacted_timestamp', 6, 'UTC'))) AS min_timestamp_with_condition,
                        if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
                        argMin(e.uuid, toTimeZone(e.timestamp, 'UTC')) AS uuid,
                        argMin(e.distinct_id, toTimeZone(e.timestamp, 'UTC')) AS distinct_id
                 FROM events AS e
                 LEFT OUTER JOIN
                   (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                           person_distinct_id_overrides.distinct_id AS distinct_id
                    FROM person_distinct_id_overrides
                    WHERE equals(person_distinct_id_overrides.team_id, 99999)
                    GROUP BY person_distinct_id_overrides.distinct_id
                    HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
                 WHERE and(equals(e.team_id, 99999), lessOrEquals(e.timestamp, toDateTime64('today', 6, 'UTC')), equals(e.event, 'signup'))
                 GROUP BY if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id)
                 HAVING and(equals(min_timestamp, min_timestamp_with_condition), notEquals(min_timestamp, fromUnixTimestamp(0))))
              GROUP BY actor_id) AS source
           ORDER BY source.id ASC
           LIMIT 1000000000 SETTINGS optimize_aggregation_in_order=1,
                                     join_algorithm='auto')) as person SETTINGS optimize_aggregation_in_order = 1,
                                                                                join_algorithm = 'auto'
  '''
# ---
# name: TestCohort.test_cohortpeople_with_not_in_cohort_operator_for_behavioural_cohorts.2
  '''
  /* cohort_calculation:cohort_calc:00000000 */
  INSERT INTO cohortpeople
  SELECT id,
         99999 as cohort_id,
         99999 as team_id,
         1 AS sign,
         2 AS version
  FROM ((
           (SELECT source.id AS id
            FROM
              (SELECT actor_id AS actor_id,
                      count() AS event_count,
                      groupUniqArray(distinct_id) AS event_distinct_ids,
                      max(timestamp) AS last_seen,
                      actor_id AS id
               FROM
                 (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
                         toTimeZone(e.timestamp, 'UTC') AS timestamp,
                         e.uuid AS uuid,
                         e.distinct_id AS distinct_id
                  FROM events AS e
                  LEFT OUTER JOIN
                    (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                            person_distinct_id_overrides.distinct_id AS distinct_id
                     FROM person_distinct_id_overrides
                     WHERE equals(person_distinct_id_overrides.team_id, 99999)
                     GROUP BY person_distinct_id_overrides.distinct_id
                     HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
                  WHERE and(equals(e.team_id, 99999), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(timestamp, toDateTime64('today', 6, 'UTC')), equals(e.event, '$pageview')))
               GROUP BY actor_id) AS source
            ORDER BY source.id ASC
            LIMIT 1000000000 SETTINGS optimize_aggregation_in_order=1,
                                      join_algorithm='auto'))
        EXCEPT (
                  (SELECT cohort_people.person_id AS id
                   FROM
                     (SELECT DISTINCT cohortpeople.person_id AS person_id,
                                      cohortpeople.cohort_id AS cohort_id,
                                      cohortpeople.team_id AS team_id
                      FROM cohortpeople
                      WHERE and(equals(cohortpeople.team_id, 99999), in(tuple(cohortpeople.cohort_id, cohortpeople.version), [(99999, 0)]))) AS cohort_people
                   WHERE and(equals(cohort_people.cohort_id, 99999), equals(cohort_people.team_id, 99999))
                   LIMIT 1000000000))) as person SETTINGS optimize_aggregation_in_order = 1,
                                                          join_algorithm = 'auto'
  '''
# ---
# name: TestCohort.test_cohortpeople_with_not_in_cohort_operator_for_behavioural_cohorts.3
  '''
  /* cohort_calculation:cohort_calc:00000000 */
  INSERT INTO cohortpeople
  SELECT id,
         99999 as cohort_id,
         99999 as team_id,
         1 AS sign,
         3 AS version
  FROM ((
           (SELECT source.id AS id
            FROM
              (SELECT actor_id AS actor_id,
                      count() AS event_count,
                      groupUniqArray(distinct_id) AS event_distinct_ids,
                      max(timestamp) AS last_seen,
                      actor_id AS id
               FROM
                 (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
                         toTimeZone(e.timestamp, 'UTC') AS timestamp,
                         e.uuid AS uuid,
                         e.distinct_id AS distinct_id
                  FROM events AS e
                  LEFT OUTER JOIN
                    (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                            person_distinct_id_overrides.distinct_id AS distinct_id
                     FROM person_distinct_id_overrides
                     WHERE equals(person_distinct_id_overrides.team_id, 99999)
                     GROUP BY person_distinct_id_overrides.distinct_id
                     HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
                  WHERE and(equals(e.team_id, 99999), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(timestamp, toDateTime64('today', 6, 'UTC')), equals(e.event, '$pageview')))
               GROUP BY actor_id) AS source
            ORDER BY source.id ASC
            LIMIT 1000000000 SETTINGS optimize_aggregation_in_order=1,
                                      join_algorithm='auto'))
        EXCEPT (
                  (SELECT cohort_people.person_id AS id
                   FROM
                     (SELECT DISTINCT cohortpeople.person_id AS person_id,
                                      cohortpeople.cohort_id AS cohort_id,
                                      cohortpeople.team_id AS team_id
                      FROM cohortpeople
                      WHERE and(equals(cohortpeople.team_id, 99999), in(tuple(cohortpeople.cohort_id, cohortpeople.version), [(99999, 0)]))) AS cohort_people
                   WHERE and(equals(cohort_people.cohort_id, 99999), equals(cohort_people.team_id, 99999))
                   LIMIT 1000000000))) as person SETTINGS optimize_aggregation_in_order = 1,
                                                          join_algorithm = 'auto'
  '''
# ---
# name: TestCohort.test_cohortpeople_with_not_in_cohort_operator_for_behavioural_cohorts[new_events_schema.1]
  '''
  /* cohort_calculation:cohort_calc:00000000 */
  INSERT INTO cohortpeople
  SELECT id,
         99999 as cohort_id,
         99999 as team_id,
         1 AS sign,
         3 AS version
  FROM (
          (SELECT source.id AS id
           FROM
             (SELECT actor_id AS actor_id,
                     count() AS event_count,
                     groupUniqArray(distinct_id) AS event_distinct_ids,
                     actor_id AS id
              FROM
                (SELECT min(toTimeZone(e.timestamp, 'UTC')) AS min_timestamp,
                        minIf(toTimeZone(e.timestamp, 'UTC'), greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('explicit_redacted_timestamp', 6, 'UTC'))) AS min_timestamp_with_condition,
                        if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
                        argMin(e.uuid, toTimeZone(e.timestamp, 'UTC')) AS uuid,
                        argMin(e.distinct_id, toTimeZone(e.timestamp, 'UTC')) AS distinct_id
                 FROM events_json AS e
                 LEFT OUTER JOIN
                   (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                           person_distinct_id_overrides.distinct_id AS distinct_id
                    FROM person_distinct_id_overrides
                    WHERE equals(person_distinct_id_overrides.team_id, 99999)
                    GROUP BY person_distinct_id_overrides.distinct_id
                    HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
                 WHERE and(equals(e.team_id, 99999), lessOrEquals(e.timestamp, toDateTime64('today', 6, 'UTC')), equals(e.event, 'signup'))
                 GROUP BY if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id)
                 HAVING and(equals(min_timestamp, min_timestamp_with_condition), notEquals(min_timestamp, fromUnixTimestamp(0))))
              GROUP BY actor_id) AS source
           ORDER BY source.id ASC
           LIMIT 1000000000 SETTINGS optimize_aggregation_in_order=1,
                                     join_algorithm='auto')) as person SETTINGS optimize_aggregation_in_order = 1,
                                                                                join_algorithm = 'auto'
  '''
# ---
# name: TestCohort.test_cohortpeople_with_not_in_cohort_operator_for_behavioural_cohorts[new_events_schema.2]
  '''
  /* cohort_calculation:cohort_calc:00000000 */
  INSERT INTO cohortpeople
  SELECT id,
         99999 as cohort_id,
         99999 as team_id,
         1 AS sign,
         2 AS version
  FROM ((
           (SELECT source.id AS id
            FROM
              (SELECT actor_id AS actor_id,
                      count() AS event_count,
                      groupUniqArray(distinct_id) AS event_distinct_ids,
                      max(timestamp) AS last_seen,
                      actor_id AS id
               FROM
                 (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
                         toTimeZone(e.timestamp, 'UTC') AS timestamp,
                         e.uuid AS uuid,
                         e.distinct_id AS distinct_id
                  FROM events_json AS e
                  LEFT OUTER JOIN
                    (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                            person_distinct_id_overrides.distinct_id AS distinct_id
                     FROM person_distinct_id_overrides
                     WHERE equals(person_distinct_id_overrides.team_id, 99999)
                     GROUP BY person_distinct_id_overrides.distinct_id
                     HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
                  WHERE and(equals(e.team_id, 99999), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(timestamp, toDateTime64('today', 6, 'UTC')), equals(e.event, '$pageview')))
               GROUP BY actor_id) AS source
            ORDER BY source.id ASC
            LIMIT 1000000000 SETTINGS optimize_aggregation_in_order=1,
                                      join_algorithm='auto'))
        EXCEPT (
                  (SELECT cohort_people.person_id AS id
                   FROM
                     (SELECT DISTINCT cohortpeople.person_id AS person_id,
                                      cohortpeople.cohort_id AS cohort_id,
                                      cohortpeople.team_id AS team_id
                      FROM cohortpeople
                      WHERE and(equals(cohortpeople.team_id, 99999), in(tuple(cohortpeople.cohort_id, cohortpeople.version), [(99999, 0)]))) AS cohort_people
                   WHERE and(equals(cohort_people.cohort_id, 99999), equals(cohort_people.team_id, 99999))
                   LIMIT 1000000000))) as person SETTINGS optimize_aggregation_in_order = 1,
                                                          join_algorithm = 'auto'
  '''
# ---
# name: TestCohort.test_cohortpeople_with_not_in_cohort_operator_for_behavioural_cohorts[new_events_schema.3]
  '''
  /* cohort_calculation:cohort_calc:00000000 */
  INSERT INTO cohortpeople
  SELECT id,
         99999 as cohort_id,
         99999 as team_id,
         1 AS sign,
         3 AS version
  FROM ((
           (SELECT source.id AS id
            FROM
              (SELECT actor_id AS actor_id,
                      count() AS event_count,
                      groupUniqArray(distinct_id) AS event_distinct_ids,
                      max(timestamp) AS last_seen,
                      actor_id AS id
               FROM
                 (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
                         toTimeZone(e.timestamp, 'UTC') AS timestamp,
                         e.uuid AS uuid,
                         e.distinct_id AS distinct_id
                  FROM events_json AS e
                  LEFT OUTER JOIN
                    (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                            person_distinct_id_overrides.distinct_id AS distinct_id
                     FROM person_distinct_id_overrides
                     WHERE equals(person_distinct_id_overrides.team_id, 99999)
                     GROUP BY person_distinct_id_overrides.distinct_id
                     HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
                  WHERE and(equals(e.team_id, 99999), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(timestamp, toDateTime64('today', 6, 'UTC')), equals(e.event, '$pageview')))
               GROUP BY actor_id) AS source
            ORDER BY source.id ASC
            LIMIT 1000000000 SETTINGS optimize_aggregation_in_order=1,
                                      join_algorithm='auto'))
        EXCEPT (
                  (SELECT cohort_people.person_id AS id
                   FROM
                     (SELECT DISTINCT cohortpeople.person_id AS person_id,
                                      cohortpeople.cohort_id AS cohort_id,
                                      cohortpeople.team_id AS team_id
                      FROM cohortpeople
                      WHERE and(equals(cohortpeople.team_id, 99999), in(tuple(cohortpeople.cohort_id, cohortpeople.version), [(99999, 0)]))) AS cohort_people
                   WHERE and(equals(cohort_people.cohort_id, 99999), equals(cohort_people.team_id, 99999))
                   LIMIT 1000000000))) as person SETTINGS optimize_aggregation_in_order = 1,
                                                          join_algorithm = 'auto'
  '''
# ---
# name: TestCohort.test_cohortpeople_with_not_in_cohort_operator_for_behavioural_cohorts[new_events_schema]
  '''
  /* cohort_calculation:cohort_calc:00000000 */
  INSERT INTO cohortpeople
  SELECT id,
         99999 as cohort_id,
         99999 as team_id,
         1 AS sign,
         2 AS version
  FROM (
          (SELECT source.id AS id
           FROM
             (SELECT actor_id AS actor_id,
                     count() AS event_count,
                     groupUniqArray(distinct_id) AS event_distinct_ids,
                     actor_id AS id
              FROM
                (SELECT min(toTimeZone(e.timestamp, 'UTC')) AS min_timestamp,
                        minIf(toTimeZone(e.timestamp, 'UTC'), greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('explicit_redacted_timestamp', 6, 'UTC'))) AS min_timestamp_with_condition,
                        if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
                        argMin(e.uuid, toTimeZone(e.timestamp, 'UTC')) AS uuid,
                        argMin(e.distinct_id, toTimeZone(e.timestamp, 'UTC')) AS distinct_id
                 FROM events_json AS e
                 LEFT OUTER JOIN
                   (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                           person_distinct_id_overrides.distinct_id AS distinct_id
                    FROM person_distinct_id_overrides
                    WHERE equals(person_distinct_id_overrides.team_id, 99999)
                    GROUP BY person_distinct_id_overrides.distinct_id
                    HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
                 WHERE and(equals(e.team_id, 99999), lessOrEquals(e.timestamp, toDateTime64('today', 6, 'UTC')), equals(e.event, 'signup'))
                 GROUP BY if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id)
                 HAVING and(equals(min_timestamp, min_timestamp_with_condition), notEquals(min_timestamp, fromUnixTimestamp(0))))
              GROUP BY actor_id) AS source
           ORDER BY source.id ASC
           LIMIT 1000000000 SETTINGS optimize_aggregation_in_order=1,
                                     join_algorithm='auto')) as person SETTINGS optimize_aggregation_in_order = 1,
                                                                                join_algorithm = 'auto'
  '''
# ---
# name: TestCohort.test_static_cohort_precalculated
  '''
  SELECT distinct_id
  FROM
    (SELECT person_distinct_ids.distinct_id AS distinct_id
     FROM
       (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
               person_distinct_id2.distinct_id AS distinct_id
        FROM person_distinct_id2
        WHERE equals(person_distinct_id2.team_id, 99999)
        GROUP BY person_distinct_id2.distinct_id
        HAVING equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0) SETTINGS optimize_aggregation_in_order=1) AS person_distinct_ids
     WHERE in(person_distinct_ids.person_id,
                (SELECT person_static_cohort.person_id AS person_id
                 FROM person_static_cohort
                 WHERE and(equals(person_static_cohort.team_id, 99999), equals(person_static_cohort.cohort_id, 99999))))
     LIMIT 1000000000)
  '''
# ---
